# rust-blog-api

rust-blog-api/: .gitignore  Cargo.toml  docker-compose.yaml
rust-blog-api/migrations/: 20230824172941_init.down.sql  20230824172941_init.up.sql  20230831220024_init.up.sql
rust-blog-api/src/: main.rs
rust-blog-api/src/controllers/: category_controller.rs  comment_controller.rs  mod.rs  post_controller.rs  user_controller.rs
rust-blog-api/src/models/: mod.rs  model.rs
rust-blog-api/src/services/: category_service.rs  comment_service.rs  mod.rs  post_service.rs  user_service.rs
rust-blog-api/src/utils/: catchers.rs  mod.rs
rust-blog-api/src/validators/: mod.rs
