[package]
name = "rust-blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
rocket = {version= "0.5.0-rc.3", features=["json"]}
serde = { version = "1.0.186", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dependencies.sqlx]
version =  "0.7.1"
features = ["macros", "migrate", "runtime-async-std-native-tls", "postgres", "chrono", "uuid"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]